--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # 可手動觸發
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
         python-version: 3.10
@@ -26,19 +26,24 @@ jobs:
                             zlib1g-dev libncurses5-dev libncursesw5-dev \
                             libreadline-dev libgdbm-dev liblzma-dev \
                             build-essential ccache git zip unzip openjdk-17-jdk
-
+        java -version
         python -m pip install --upgrade pip setuptools Cython virtualenv
         pip install buildozer
 
-    - name: Create buildozer.spec if missing
+    - name: Check Android SDK
+      run: |
+        echo $ANDROIDSDK
+        ls -l ~/.buildozer/android/platform/android-sdk
+
+    - name: Initialize buildozer.spec if missing
       run: |
         if [ ! -f buildozer.spec ]; then
           buildozer init
         fi
 
-    - name: Build APK
+    - name: Build APK with verbose output
       run: |
-        buildozer android debug
+        buildozer android debug --verbose
 
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
