--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,40 +14,68 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
-        python-version: 3.11
+        python-version: 3.10
 
+    - name: Cache Buildozer and Android SDK
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.buildozer
+          ~/.android
+        key: ${{ runner.os }}-buildozer-${{ hashFiles('**/buildozer.spec') }}
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
         sudo apt update
-        sudo apt install -y libffi-dev libssl-dev libbz2-dev libsqlite3-dev \
-                            zlib1g-dev libncurses5-dev libncursesw5-dev \
-                            libreadline-dev libgdbm-dev liblzma-dev \
-                            build-essential ccache git zip unzip openjdk-17-jdk
-        java -version
+        sudo apt install -y \
+          openjdk-17-jdk \
+          unzip \
+          zip \
+          build-essential \
+          ccache \
+          git \
+          libffi-dev \
+          libssl-dev \
+          libbz2-dev \
+          libsqlite3-dev \
+          zlib1g-dev \
+          libncurses5-dev \
+          libncursesw5-dev \
+          libreadline-dev \
+          libgdbm-dev \
+          liblzma-dev
+
+    - name: Install Python packages
+      run: |
         python -m pip install --upgrade pip setuptools Cython virtualenv
         pip install buildozer
 
-    - name: Check Android SDK
+    - name: Accept Android SDK licenses and install SDK/NDK
+      env:
+        ANDROID_SDK_ROOT: ~/.buildozer/android/platform/android-sdk
       run: |
-        echo $ANDROIDSDK
-        ls -l ~/.buildozer/android/platform/android-sdk
-
-    - name: Initialize buildozer.spec if missing
-      run: |
-        if [ ! -f buildozer.spec ]; then
-          buildozer init
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        cd $ANDROID_SDK_ROOT/cmdline-tools
+        if [ ! -d latest ]; then
+          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
+          unzip -q commandlinetools.zip
+          rm commandlinetools.zip
+          mv cmdline-tools latest
         fi
 
-    - name: Build APK with verbose output
+        yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
+        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-31" "build-tools;31.0.0" "ndk;25.1.8937393"
+
+    - name: Build APK with Buildozer
       run: |
-        buildozer android debug --verbose
+        buildozer android clean
+        buildozer android debug
 
     - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
         name: myapp-debug-apk
         path: bin/*.apk
