--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,8 +23,8 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          ~/.buildozer
-          ~/.android
+          $HOME/.buildozer
+          $HOME/.android
         key: ${{ runner.os }}-buildozer-${{ hashFiles('**/buildozer.spec') }}
 
     - name: Install system dependencies
@@ -55,7 +55,7 @@ jobs:
 
     - name: Accept Android SDK licenses and install SDK/NDK
       env:
-        ANDROID_SDK_ROOT: ~/.buildozer/android/platform/android-sdk
+        ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
       run: |
         mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
         cd $ANDROID_SDK_ROOT/cmdline-tools
@@ -63,7 +63,7 @@ jobs:
           curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip -q commandlinetools.zip
           rm commandlinetools.zip
-          mv cmdline-tools latest
+          mv cmdline-tools/cmdline-tools latest
         fi
 
         yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
