--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -112,3 +112,19 @@ jobs:
           "platforms;android-31" \
           "build-tools;31.0.0" \
           "ndk;25.1.8937393"
+
+    - name: 設置 Gradle
+      uses: gradle/actions/setup-gradle@v3
+
+    - name: 構建 APK
+      run: |
+        # 假設項目位於根目錄，使用 Gradle 構建
+        ./gradlew assembleRelease
+      env:
+        ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
+
+    - name: 上傳 Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-release
+        path: app/build/outputs/apk/release/*.apk
