Add buildozer spec and GitHub Actions for release APK

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,121 +1,78 @@
-name: Android CI
+name: Android Release Build
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    tags:
+      - 'v*' # 例如 v1.0.0 推 tag 才會觸發
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 檢查出代碼
+    - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: 設置 Java 環境
+    - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
-        java-version: '17'
+        distribution: temurin
+        java-version: 17
 
-    - name: 設置 Python 環境
+    - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    - name: 設置 Android SDK
+    - name: Setup Android SDK
       env:
         ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
       run: |
-        echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
-        mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools" || { echo "無法創建 $ANDROID_SDK_ROOT/cmdline-tools 目錄！"; exit 1; }
-        cd "$ANDROID_SDK_ROOT/cmdline-tools" || { echo "無法進入 $ANDROID_SDK_ROOT/cmdline-tools 目錄！"; exit 1; }
-        echo "當前工作目錄："
-        pwd
-        if [ ! -d latest ]; then
-          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip -q commandlinetools.zip
-          rm commandlinetools.zip
-          echo "解壓後的目錄內容："
-          ls -la
-          if [ -d cmdline-tools ]; then
-            echo "cmdline-tools 目錄內容："
-            ls -la cmdline-tools
-            if [ -d cmdline-tools/bin ]; then
-              echo "cmdline-tools/bin 目錄內容："
-              ls -la cmdline-tools/bin
-            fi
-          fi
-          if [ -d cmdline-tools ]; then
-            echo "移動 cmdline-tools 內容到 latest"
-            mkdir -p latest
-            mv cmdline-tools/* latest/ || { echo "移動 cmdline-tools 內容失敗！"; exit 1; }
-            rm -rf cmdline-tools
-          elif [ -d commandlinetools ]; then
-            echo "移動 commandlinetools 內容到 latest"
-            mkdir -p latest
-            mv commandlinetools/* latest/ || { echo "移動 commandlinetools 內容失敗！"; exit 1; }
-            rm -rf commandlinetools
-          else
-            echo "錯誤：未找到預期的 cmdline-tools 或 commandlinetools 目錄！"
-            exit 1
-          fi
-          echo "latest 目錄內容："
-          ls -la latest || { echo "latest 目錄未正確創建！"; exit 1; }
-          if [ -d latest/bin ]; then
-            echo "latest/bin 目錄內容："
-            ls -la latest/bin
-          else
-            echo "錯誤：latest/bin 目錄不存在！"
-            exit 1
-          fi
-        fi
-        if [ ! -f "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
-          echo "錯誤：sdkmanager 未在 $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/ 找到！"
-          exit 1
-        fi
-        chmod +x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-        yes | "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --sdk_root="$ANDROID_SDK_ROOT" --licenses
-        "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --sdk_root="$ANDROID_SDK_ROOT" \
+        mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
+        cd "$ANDROID_SDK_ROOT/cmdline-tools"
+        curl -o cmdline-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip -q cmdline-tools.zip
+        rm cmdline-tools.zip
+        mkdir -p latest
+        mv cmdline-tools/* latest/
+        chmod +x latest/bin/*
+        yes | latest/bin/sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
+        latest/bin/sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
           "platform-tools" \
           "platforms;android-31" \
           "build-tools;31.0.0" \
           "ndk;25.1.8937393"
 
-    - name: 設置 Buildozer 依賴
+    - name: Link sdkmanager legacy path
+      run: |
+        mkdir -p "$ANDROID_SDK_ROOT/tools"
+        ln -s "$ANDROID_SDK_ROOT/cmdline-tools/latest" "$ANDROID_SDK_ROOT/tools/bin"
+
+    - name: Install Python dependencies
       run: |
         pip install buildozer
         pip install cython==0.29.33
 
-    - name: 構建 APK
+    - name: Decode keystore file
       run: |
-        echo "當前工作目錄："
-        pwd
-        ls -la
-        if [ ! -f buildozer.spec ]; then
-          echo "錯誤：buildozer.spec 文件未找到！請確保項目根目錄包含 buildozer.spec。"
-          exit 1
-        fi
+        echo "$KEYSTORE_BASE64" | base64 -d > my-release-key.keystore
+      env:
+        KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+
+    - name: Build Release APK
+      env:
+        ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
+        ANDROID_HOME: /home/runner/.buildozer/android/platform/android-sdk
+        PATH: ${{ env.PATH }}:/home/runner/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin
+      run: |
         export ANDROIDSDK=$ANDROID_SDK_ROOT
         export ANDROID_HOME=$ANDROID_SDK_ROOT
         export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
-        echo "ANDROIDSDK=$ANDROIDSDK"
-        echo "ANDROID_HOME=$ANDROID_HOME"
-        echo "PATH=$PATH"
-        if [ ! -f "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
-          echo "錯誤：sdkmanager 未在 $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/ 找到！"
-          exit 1
-        fi
-        buildozer android debug --sdkmanager "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-      env:
-        ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
+        buildozer android release
 
-    - name: 上傳 Artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload Release to GitHub
+      uses: softprops/action-gh-release@v1
       with:
-        name: app-debug
-        path: bin/*.apk
+        files: bin/*.apk
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
