--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,77 +1,68 @@
-name: Android Release Build
+name: Build Release APK
 
 on:
   push:
     tags:
-      - 'v*' # 例如 v1.0.0 推 tag 才會觸發
+      - 'v*'  # 觸發條件為類似 v1.0.0 的 tag
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout 代碼
       uses: actions/checkout@v4
 
-    - name: Setup Java
+    - name: 安裝 Git
+      run: sudo apt-get update && sudo apt-get install -y git
+
+    - name: 設定 Java 環境
       uses: actions/setup-java@v4
       with:
         distribution: temurin
         java-version: 17
 
-    - name: Setup Python
+    - name: 設定 Python 環境
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    - name: Setup Android SDK
+    - name: 安裝 Buildozer 相關依賴
+      run: |
+        pip install --upgrade pip
+        pip install buildozer
+        pip install cython==0.29.33
+
+    - name: 設置 Android SDK & NDK
       env:
         ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
       run: |
-        mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
-        cd "$ANDROID_SDK_ROOT/cmdline-tools"
-        curl -o cmdline-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip -q cmdline-tools.zip
-        rm cmdline-tools.zip
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        cd $ANDROID_SDK_ROOT/cmdline-tools
+        curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip -q tools.zip
+        rm tools.zip
         mkdir -p latest
-        mv cmdline-tools/* latest/
-        chmod +x latest/bin/*
-        yes | latest/bin/sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
-        latest/bin/sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
+        mv cmdline-tools/* latest/ || mv commandlinetools/* latest/
+        chmod +x $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager
+        yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} --licenses
+        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} \
           "platform-tools" \
           "platforms;android-31" \
           "build-tools;31.0.0" \
           "ndk;25.1.8937393"
 
-    - name: Link sdkmanager legacy path
-      run: |
-        mkdir -p "$ANDROID_SDK_ROOT/tools"
-        ln -s "$ANDROID_SDK_ROOT/cmdline-tools/latest" "$ANDROID_SDK_ROOT/tools/bin"
-
-    - name: Install Python dependencies
-      run: |
-        pip install buildozer
-        pip install cython==0.29.33
-
-    - name: Decode keystore file
-      run: |
-        echo "$KEYSTORE_BASE64" | base64 -d > my-release-key.keystore
-      env:
-        KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-
-    - name: Build Release APK
+    - name: 構建 Release APK
       env:
         ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
-        ANDROID_HOME: /home/runner/.buildozer/android/platform/android-sdk
-        PATH: ${{ env.PATH }}:/home/runner/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin
       run: |
         export ANDROIDSDK=$ANDROID_SDK_ROOT
         export ANDROID_HOME=$ANDROID_SDK_ROOT
         export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
         buildozer android release
 
-    - name: Upload Release to GitHub
-      uses: softprops/action-gh-release@v1
+    - name: 上傳 APK 到 GitHub Release
+      uses: softprops/action-gh-release@v2
       with:
         files: bin/*.apk
       env:
