--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,69 +1,72 @@
-name: Build Release APK
+name: Android Release CI
 
 on:
   push:
     tags:
-      - 'v*'  # 觸發條件為類似 v1.0.0 的 tag
+      - 'v*'  # 例如 v1.0.0、v2.1.3
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout 代碼
+    - name: 檢查出代碼
       uses: actions/checkout@v4
 
     - name: 安裝 Git
       run: sudo apt-get update && sudo apt-get install -y git
 
-    - name: 設定 Java 環境
+    - name: 設置 Java 環境
       uses: actions/setup-java@v4
       with:
-        distribution: temurin
-        java-version: 17
+        distribution: 'temurin'
+        java-version: '17'
 
-    - name: 設定 Python 環境
+    - name: 設置 Python 環境
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    - name: 安裝 Buildozer 相關依賴
-      run: |
-        pip install --upgrade pip
-        pip install buildozer
-        pip install cython==0.29.33
-
-    - name: 設置 Android SDK & NDK
+    - name: 設置 Android SDK
       env:
         ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
       run: |
-        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-        cd $ANDROID_SDK_ROOT/cmdline-tools
+        mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
+        cd "$ANDROID_SDK_ROOT/cmdline-tools"
         curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
         unzip -q tools.zip
         rm tools.zip
         mkdir -p latest
-        mv cmdline-tools/* latest/ || mv commandlinetools/* latest/
-        chmod +x $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager
-        yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} --licenses
-        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} \
+        mv cmdline-tools/* latest/
+        chmod +x latest/bin/sdkmanager
+        yes | latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
+        latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
           "platform-tools" \
           "platforms;android-31" \
           "build-tools;31.0.0" \
           "ndk;25.1.8937393"
 
-    - name: 構建 Release APK
-      env:
-        ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
+    - name: 安裝 Buildozer 依賴
+      run: |
+        pip install --upgrade pip
+        pip install buildozer cython==0.29.33
+
+    - name: 建置 Release APK
       run: |
         export ANDROIDSDK=$ANDROID_SDK_ROOT
         export ANDROID_HOME=$ANDROID_SDK_ROOT
         export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
         buildozer android release
+      env:
+        ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
 
-    - name: 上傳 APK 到 GitHub Release
+    - name: 上傳 APK Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-release
+        path: bin/*.apk
+
+    - name: 發佈到 GitHub Releases
       uses: softprops/action-gh-release@v2
       with:
         files: bin/*.apk
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
