--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -3,7 +3,7 @@ name: Android Release CI
 on:
   push:
     tags:
-      - 'v*'  # 例如 v1.0.0、v2.1.3
+      - 'v*'  # 例如 v1.0.0、v1.1.3 等
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 安裝 Git
-      run: sudo apt-get update && sudo apt-get install -y git
+      run: sudo apt-get update && sudo apt-get install -y git unzip
 
     - name: 設置 Java 環境
       uses: actions/setup-java@v4
@@ -27,7 +27,12 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: 設置 Android SDK
+    - name: 安裝 Buildozer 依賴
+      run: |
+        pip install --upgrade pip
+        pip install cython==0.29.33 buildozer
+
+    - name: 安裝 Android SDK
       env:
         ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
       run: |
@@ -46,10 +51,10 @@ jobs:
           "build-tools;31.0.0" \
           "ndk;25.1.8937393"
 
-    - name: 安裝 Buildozer 依賴
+    - name: 修復 Buildozer 相容的 sdkmanager 路徑
       run: |
-        pip install --upgrade pip
-        pip install buildozer cython==0.29.33
+        mkdir -p $ANDROID_SDK_ROOT/tools
+        ln -sf $ANDROID_SDK_ROOT/cmdline-tools/latest $ANDROID_SDK_ROOT/tools/
 
     - name: 建置 Release APK
       run: |
