--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,77 +1,51 @@
-name: Android Release CI
+name: Build Android APK
 
 on:
   push:
     tags:
-      - 'v*'  # 例如 v1.0.0、v1.1.3 等
+      - 'v*'  # 自動觸發版本號，例如 v1.0.0
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 檢查出代碼
-      uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v3
 
-    - name: 安裝 Git
-      run: sudo apt-get update && sudo apt-get install -y git unzip
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
 
-    - name: 設置 Java 環境
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install buildozer cython
 
-    - name: 設置 Python 環境
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Create buildozer.spec if not exists
+        run: |
+          if [ ! -f buildozer.spec ]; then
+            buildozer init
+          fi
 
-    - name: 安裝 Buildozer 依賴
-      run: |
-        pip install --upgrade pip
-        pip install cython==0.29.33 buildozer
+      - name: 修復 Buildozer 相容的 sdkmanager 路徑
+        run: |
+          mkdir -p $ANDROID_SDK_ROOT/tools
+          ln -sf $ANDROID_SDK_ROOT/cmdline-tools/latest $ANDROID_SDK_ROOT/tools/
 
-    - name: 安裝 Android SDK
-      env:
-        ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
-      run: |
-        mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
-        cd "$ANDROID_SDK_ROOT/cmdline-tools"
-        curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip -q tools.zip
-        rm tools.zip
-        mkdir -p latest
-        mv cmdline-tools/* latest/
-        chmod +x latest/bin/sdkmanager
-        yes | latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-        latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
-          "platform-tools" \
-          "platforms;android-31" \
-          "build-tools;31.0.0" \
-          "ndk;25.1.8937393"
+      - name: Build Release APK
+        env:
+          ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
+          ANDROID_HOME: /home/runner/.buildozer/android/platform/android-sdk
+        run: |
+          export ANDROIDSDK=$ANDROID_SDK_ROOT
+          export ANDROID_HOME=$ANDROID_SDK_ROOT
+          export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
+          buildozer android release
 
-    - name: 修復 Buildozer 相容的 sdkmanager 路徑
-      run: |
-        mkdir -p $ANDROID_SDK_ROOT/tools
-        ln -sf $ANDROID_SDK_ROOT/cmdline-tools/latest $ANDROID_SDK_ROOT/tools/
-
-    - name: 建置 Release APK
-      run: |
-        export ANDROIDSDK=$ANDROID_SDK_ROOT
-        export ANDROID_HOME=$ANDROID_SDK_ROOT
-        export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
-        buildozer android release
-      env:
-        ANDROID_SDK_ROOT: /home/runner/.buildozer/android/platform/android-sdk
-
-    - name: 上傳 APK Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-release
-        path: bin/*.apk
-
-    - name: 發佈到 GitHub Releases
-      uses: softprops/action-gh-release@v2
-      with:
-        files: bin/*.apk
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: bin/*.apk
